--- a/index.htm
+++ b/index.htm
@@ -1,22 +1,2 @@
-<html>
-
-
-
-<img src="medium (2).jpg" width= "1600px" >
-
-
-
-
-</body>
-
-
-
-
-
-
-
-
-
-</html>
-
-
+travaille mieux c pas bien ce que tu fais je suis mr gali espece de sale merde en plus t nul en code,en cours,en hygiene informatique avec ton cousin de merde ta famille de merde t 
+une merde sale pute avec tes notes de merde
