--- a/index.html
+++ b/index.html
@@ -1,20 +1,106 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV de Houari Chafi</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #007BFF;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        .contacts, .skills, .interests {
+            list-style: none;
+            padding: 0;
+        }
+        .contacts li, .skills li, .interests li {
+            margin: 5px 0;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Houari Chafi</h1>
+        <h2>Étudiant en BTS Informatique (SIO)</h2>
 
+        <div class="section">
+            <h3>Contacts</h3>
+            <ul class="contacts">
+                <li>Adresse : Rue Paul Eluard 91700</li>
+                <li>Téléphone : +33 06 52 46 70 26</li>
+                <li>Email : houarichafi@yahoo.com</li>
+            </ul>
+        </div>
 
+        <div class="section">
+            <h3>Parcours</h3>
+            <ul>
+                <li>Baccalauréat Technologique STMG (spécialité gestion finance) - Mention Assez bien (2022 - 2023)</li>
+                <li>Étudiant en BTS Informatique (SIO) au lycée Turgot (2024 - Présent)</li>
+            </ul>
+        </div>
 
-<img src="CV.jpg" width= "1600px" >
+        <div class="section">
+            <h3>Expériences</h3>
+            <ul>
+                <li>Stage de 3e en pharmacie pendant la période du Covid-19</li>
+                <li>Stage en informatique</li>
+                <li>Organisateur d’événements (ex : fête de la musique, été 2024)</li>
+                <li>Auto-entrepreneur chez Roalmer (missions d’enquêtes auprès de l’entreprise)</li>
+            </ul>
+        </div>
 
+        <div class="section">
+            <h3>Savoir-faire</h3>
+            <ul class="skills">
+                <li>Base en HTML/CSS</li>
+                <li>Base de données/SQL (MySQL)</li>
+                <li>Hygiène informatique</li>
+                <li>Réseau et système</li>
+            </ul>
+        </div>
 
+        <div class="section">
+            <h3>Savoir-être</h3>
+            <ul>
+                <li>Rigoureux</li>
+                <li>Assidu</li>
+                <li>Autonome</li>
+                <li>Capacité à travailler en équipe</li>
+            </ul>
+        </div>
 
+        <div class="section">
+            <h3>Centre d’intérêt</h3>
+            <ul class="interests">
+                <li>Lectures (Manga, Roman)</li>
+                <li>Sport (Football, Judo)</li>
+                <li>Jeux vidéo</li>
+                <li>3D (novice en Blender)</li>
+            </ul>
+        </div>
 
+        <div class="section">
+            <h3>Conclusion</h3>
+            <p>Doté de bonnes bases en informatique, d’une grande rigueur organisationnelle et de bonnes capacités relationnelles, je suis déterminé à mettre ces qualités au service de votre entreprise pour contribuer efficacement à son succès.</p>
+        </div>
+    </div>
 </body>
-
-
-
-
-
-
-
-
-
 </html>
