--- a/index.html
+++ b/index.html
@@ -136,6 +136,17 @@
         </div>
 
         <div class="section">
+            <h3>Veille</h3>
+            <ul>
+                <li>3D</li>
+                <li>Cybersécurité</li>
+                <li>Jeux vidéo</li>
+                
+                
+            </ul>
+        </div>
+
+        <div class="section">
             <h3>Langue</h3>
             <ul>
                 <li>Anglais B1</li>
