--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
                  <li>Ubuntu</li>
                 <li>PHPMyAdmin</li>
                 <li>SQLite</li>
+                <li>Gestion de projet</li>
+                <li>Adresse IP</li>
+                <li>Infrastructure Reseau</li>
+                <li>Script Automatiser</li>
+                <li>Plan d'adressage reseau</li>
+                <li>PowerShell</li>
+                <li>SSH</li>
+                <li>Kanboard</li>
                 
                 
             </ul>
